--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <meta name="keywords" content="programacao,html,css,javacript">
     <meta name="author" content="Cauã de Sousa">
     <title>WebJobs</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nav-style.css">
+    <link rel="stylesheet" href="./css/main-context-style.css">
+    <link rel="stylesheet" href="./css/about-style.css">
+    <link rel="stylesheet" href="./css/services-style.css">
+    <link rel="stylesheet" href="./css/performance-style.css">
+    <link rel="stylesheet" href="./css/support-style.css">
+    <link rel="stylesheet" href="./css/form-style.css">
+    <link rel="stylesheet" href="./css/footer-style.css">
+
 </head>
 <body>
 
@@ -270,7 +279,7 @@
         
         <br>
 
-        <section class="support">
+        <section id="contact" class="support">
             <article>
                 <!-- <img src= alt=""> -->
                 <div class="context-img"></div>
